@@ -154,6 +154,7 @@ Chronological list of authors
   - Karthikeyan Singaravelan
 2021
   - Aditya Kamath
+  - Leonardo Barneschi
   
 External code
 -------------
