@@ -21,6 +21,8 @@ The rules for this file:
   * 2.0.0
 
 Fixes
+  * A Universe created from an ROMol with no atoms returns now a Universe 
+    with 0 atoms (Issue #3142)
   * ValueError raised when empty atomgroup is given to DensityAnalysis
     without a user defined grid. UserWarning displayed when user defined 
     grid is provided. (Issue #3055)
